# logrec

./: CMakeLists.txt  LICENSE  README.md  SingltoneCollection.cpp  SingltoneCollection.h  logrec.cpp  logrec.h  putlog.hpp
sources/: CMakeLists.txt  SingltoneCollection.cpp  SingltoneCollection.h  logrec.cpp  logrec.h  putlog.h  putlog.hpp
tests/: CMakeLists.txt  test.cpp
